# storage/api-docs/api-docs.json
@@ -68,6 +68,50 @@
                 }
             }
         },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User logout",
+                "operationId": "0d29c740dc06d77602af8095bf4654cc",
+                "responses": {
+                    "200": {
+                        "description": "User logout success"
+                    },
+                    "403": {
+                        "description": "Already inauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/auth/refresh": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh jwt token",
+                "operationId": "f6c9683ed975ace7d035a09e6e2a9332",
+                "responses": {
+                    "200": {
+                        "description": "Token refresh success"
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/bookPage/book": {
             "get": {
                 "tags": [
@@ -211,7 +255,7 @@
                     {
                         "name": "name",
                         "in": "query",
-                        "description": "book name",
+                        "description": "Book name",
                         "schema": {
                             "type": "string"
                         }
